# CeNeuroVAE

./: README.md  pyproject.toml
.github/workflows/: test.yml
src/ceneurovae/: data.py  import_data.py  optimizer.py  pred.py  train.py
src/ceneurovae/model/: __init__.py  loss.py  utility.py  vae.py
src/test/: test_loss.py
test/: test_generate.py  test_model.py  test_train.py
