[project]
name = "cevae"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "urlicht", email = "urlicht@users.noreply.github.com" }
]
requires-python = ">=3.12"
dependencies = []

[project.scripts]
cevae = "cevae:main"

[build-system]
requires = ["uv_build>=0.8.22,<0.9.0"]
build-backend = "uv_build"
