[project]
name = "ceneurovae"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "urlicht", email = "urlicht@users.noreply.github.com" }
]
requires-python = ">=3.12"
dependencies = []

[project.optional-dependencies]
dev = ["pytest>=8.0", "ruff>=0.3.0", "mypy>=1.8"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["test"]

[build-system]
requires = ["uv_build>=0.8.22,<0.9.0"]
build-backend = "uv_build"
